--- a/META.yml
+++ b/META.yml
@@ -1,10 +1,11 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         IPC-Locker
-version:      1.433
+version:      1.434
 version_from: lib/IPC/Locker.pm
+license:      perl
 installdirs:  site
 requires:
 
 distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
+generated_by: hand
