--- a/META.yml
+++ b/META.yml
@@ -1,11 +1,12 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         IPC-Locker
-version:      1.434
+version:      1.440
 version_from: lib/IPC/Locker.pm
 license:      perl
 installdirs:  site
 requires:
+    Time::HiRes:                   0
 
 distribution_type: module
 generated_by: hand
