--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:         IPC-Locker
-version:      1.486
+version:      1.487
 version_from: lib/IPC/Locker.pm
 abstract:     Distributed lock handler
 license:      perl
@@ -13,6 +13,7 @@ resources:
 requires:
     Net::Domain:                   0
     Pod::Usage:                    1.34
+    Test::More:                    0
     Time::HiRes:                   0
 
 meta-spec:
